; ModuleID = '/home/carl/AnghaBench/systemd/src/basic/extr_strv.c_strv_clear.c'
source_filename = "/home/carl/AnghaBench/systemd/src/basic/extr_strv.c_strv_clear.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @strv_clear(i8** %0) #0 {
  %2 = alloca i8**, align 8
  %3 = alloca i8**, align 8
  store i8** %0, i8*** %2, align 8
  %4 = load i8**, i8*** %2, align 8
  %5 = icmp ne i8** %4, null
  br i1 %5, label %7, label %6

6:                                                ; preds = %1
  br label %22

7:                                                ; preds = %1
  %8 = load i8**, i8*** %2, align 8
  store i8** %8, i8*** %3, align 8
  br label %9

9:                                                ; preds = %17, %7
  %10 = load i8**, i8*** %3, align 8
  %11 = load i8*, i8** %10, align 8
  %12 = icmp ne i8* %11, null
  br i1 %12, label %13, label %20

13:                                               ; preds = %9
  %14 = load i8**, i8*** %3, align 8
  %15 = load i8*, i8** %14, align 8
  %16 = call i32 @free(i8* %15)
  br label %17

17:                                               ; preds = %13
  %18 = load i8**, i8*** %3, align 8
  %19 = getelementptr inbounds i8*, i8** %18, i32 1
  store i8** %19, i8*** %3, align 8
  br label %9

20:                                               ; preds = %9
  %21 = load i8**, i8*** %2, align 8
  store i8* null, i8** %21, align 8
  br label %22

22:                                               ; preds = %20, %6
  ret void
}

declare dso_local i32 @free(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
